# google-cloud-python-mcp

./: .gitignore  README.md  pyproject.toml
examples/skills/meeting-notes/: SKILL.md
src/google_cloud_mcp/: auth.py  server.py
